--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Web.loader.js";
+      var loaderUrl = buildUrl + "/island-siege-web.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Web.data.gz",
-        frameworkUrl: buildUrl + "/Web.framework.js.gz",
-        codeUrl: buildUrl + "/Web.wasm.gz",
+        dataUrl: buildUrl + "/island-siege-web.data",
+        frameworkUrl: buildUrl + "/island-siege-web.framework.js",
+        codeUrl: buildUrl + "/island-siege-web.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Boar Studios",
         productName: "Island Siege",
